--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       </div>
       <div class="video-container">
-        <video src="/images/video11.mp4" autoplay loop muted></video>
+        <video src="video11.mp4" autoplay loop muted></video>
       </div>
       <div class="bottom-container">
         <div class="bottom-con">
@@ -104,7 +104,7 @@
 
       <div class="info-section section0">
         <div class="head">
-          <img src="/images/ysllogo.png" alt="">
+          <img src="ysllogo.png" alt="">
           <div class="h1Wrapper1">
             <div class="h1Text1">
               <h1>YVES</h1>
@@ -119,7 +119,7 @@
         </div>
         <div class="image">
           <div class="imageback"></div>
-          <img src="/images/yslportrait2.avif" alt="">
+          <img src="yslportrait2.avif" alt="">
         </div>
         <div class="info">
           <div class="para">
@@ -140,14 +140,14 @@
           <a href="yslproduct.html">OPEN</a>
           <div class="simage2">
             <div class="simageback2"></div>
-            <img src="/images/yslbag.jpg" alt="">
+            <img src="yslbag.jpg" alt="">
           </div>
         </div>
       </div>
 
       <div class="info-section section1">
         <div class="head1">
-          <img src="/images/diorlogo-removebg-preview.png" alt="">
+          <img src="diorlogo-removebg-preview.png" alt="">
           <div class="h1Wrapper11">
             <div class="h1Text11">
               <h1>DIOR</h1>
@@ -156,7 +156,7 @@
         </div>
         <div class="image1">
           <div class="imageback1"></div>
-          <img src="/images/diormainimage.jpg" alt="">
+          <img src="diormainimage.jpg" alt="">
         </div>
         <div class="info1">
           <div class="para1">
@@ -177,14 +177,14 @@
           <a href="dior.html">OPEN</a>
           <div class="simage21">
             <div class="simageback21"></div>
-            <img src="/images/diorsideimage.jpg" alt="">
+            <img src="diorsideimage.jpg" alt="">
           </div>
         </div>
       </div>
 
       <div class="info-section section2">
         <div class="head2">
-          <img src="/images/cristianlogo.svg" alt="">
+          <img src="cristianlogo.svg" alt="">
           <div class="h1Wrapper12">
             <div class="h1Text12">
               <h1>CHRISTIAN</h1>
@@ -196,7 +196,7 @@
         </div>
         <div class="image2">
           <div class="imageback2"></div>
-          <img src="/images/crsistianlmain.jpg" alt="">
+          <img src="crsistianlmain.jpg" alt="">
         </div>
         <div class="info2">
           <div class="para2">
@@ -217,14 +217,14 @@
           <a href="cristianl.html">OPEN</a>
           <div class="simage22">
             <div class="simageback22"></div>
-            <img src="/images/cristianlside.jpg" alt="">
+            <img src="cristianlside.jpg" alt="">
           </div>
         </div>
       </div>
 
       <div class="info-section section3">
         <div class="head3">
-          <img src="/images/ctlogo-removebg-preview.png" alt="">
+          <img src="ctlogo-removebg-preview.png" alt="">
           <div class="h1Wrapper13">
             <div class="h1Text13">
               <h1>CHARLOTTE</h1>
@@ -236,7 +236,7 @@
         </div>
         <div class="image3">
           <div class="imageback3"></div>
-          <img src="/images/ctmain.png" alt="">
+          <img src="ctmain.png" alt="">
         </div>
         <div class="info3">
           <div class="para3">
@@ -257,7 +257,7 @@
           <a href="ct.html">OPEN</a>
           <div class="simage23">
             <div class="simageback23"></div>
-            <img src="/images/ctside.jpg" alt="">
+            <img src="ctside.jpg" alt="">
           </div>
         </div>
       </div>
@@ -329,13 +329,13 @@
         <div class="imageInfoContainer">
           
             <div class="grid-wrap">
-                <div class="box one" style="--img:url(/images/anshika.jpg);" data-text="Anshika Pathak /Designer"></div>
+                <div class="box one" style="--img:url(anshika.jpg);" data-text="Anshika Pathak /Designer"></div>
 
-                <div class="box two" style="--img:url(/images/aditya3.jpg);" data-text="Aditya Maurya /Developer"></div>
+                <div class="box two" style="--img:url(aditya3.jpg);" data-text="Aditya Maurya /Developer"></div>
 
-                <div class="box three" style="--img:url(/images/aryan.jpg);" data-text="Aryan Kale /Administrator"></div>
+                <div class="box three" style="--img:url(aryan.jpg);" data-text="Aryan Kale /Administrator"></div>
 
-                <div class="box four" style="--img:url(/images/aditi.jpg);" data-text="Aditi Gaur /Acomodator"></div>
+                <div class="box four" style="--img:url(aditi.jpg);" data-text="Aditi Gaur /Acomodator"></div>
             </div>
         
         </div>
