--- a/addToCart.html
+++ b/addToCart.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>velouré : Add To Cart</title>
-    <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/product/addToCart.css">
+    <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="addToCart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -20,7 +20,7 @@
             </div>
             <div class="menuBtn">
                 <div class="cartno">0</div>
-                <a href="/src/addToCart.html"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="addToCart.html"><i class="fa-solid fa-cart-plus"></i></a>
                 <!-- <i class="fa-solid fa-bars"></i> -->
             </div>
         </nav>
@@ -124,7 +124,7 @@
             </svg>
             <div class="rights">
                 <p>©24 Velouré - All rights reserved</p>
-                <a href="/terms&service.html">Terms of Service</a>
+                <a href="terms&service.html">Terms of Service</a>
                 <a href="">Privacy Policy</a>
             </div>
         </div>
@@ -134,7 +134,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
-    <script type="module" src="/jsfiles/showCartProduct.js"></script>
+    <script type="module" src="showCartProduct.js"></script>
 </body>
 
 </html>
