--- a/cristianl.html
+++ b/cristianl.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Louboutin</title>
-    <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/product/commonProduct.css">
+    <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="commonProduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -71,14 +71,14 @@
 
         <div class="homeImageContainer">
             <div class="shImage">
-                <img src="/images/cristianmain1.webp" alt="">
+                <img src="cristianmain1.webp" alt="">
             </div>
             <div class="shImage">
-                <img src="/images/cristianlside.jpg" alt="">
+                <img src="cristianlside.jpg" alt="">
             </div>
-            <div class="shImage">
+<!--             <div class="shImage">
                 <img src="/images/yslland4.avif" alt="">
-            </div>
+            </div> -->
         </div>
         <!-- HEADER SECTION ENDS -->
 
@@ -144,7 +144,7 @@
                 </svg>
                 <div class="rights">
                     <p>©24 Velouré - All rights reserved</p>
-                    <a href="/terms&service.html">Terms of Service</a>
+                    <a href="terms&service.html">Terms of Service</a>
                     <a href="">Privacy Policy</a>
                 </div>
             </div>
@@ -161,7 +161,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script type="module" src="/product/commonProduct3.js"></script>
+    <script type="module" src="commonProduct3.js"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
 </body>
 
