--- a/ct.html
+++ b/ct.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charlotte Tilbury</title>
-    <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/product/commonProduct.css">
+    <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="commonProduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -79,10 +79,10 @@
 
         <div class="homeImageContainer">
             <div class="shImage">
-                <img src="/images/charlottemain1.avif" alt="">
+                <img src="charlottemain1.avif" alt="">
             </div>
             <div class="shImage">
-                <img src="/images/charlottemain2.webp" alt="">
+                <img src="charlottemain2.webp" alt="">
             </div>
             <!-- <div class="shImage">
                 <img src="/images/charlottemain3.webp" alt="">
@@ -171,7 +171,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script type="module" src="/product/commonProduct4.js"></script>
+    <script type="module" src="commonProduct4.js"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
 </body>
 
