--- a/dior.html
+++ b/dior.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dior</title>
-    <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/product/commonProduct.css">
+    <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="commonProduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -78,13 +78,13 @@
 
         <div class="homeImageContainer">
             <div class="shImage">
-                <img src="/images/diorsideimage.jpg" alt="">
+                <img src="diorsideimage.jpg" alt="">
             </div>
             <div class="shImage">
-                <img src="/images/diormain2.jpg" alt="">
+                <img src="diormain2.jpg" alt="">
             </div>
             <div class="shImage">
-                <img src="/images/diormain3.jpg" alt="">
+                <img src="diormain3.jpg" alt="">
             </div>
         </div>
 
@@ -172,7 +172,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script type="module" src="/product/commonProduct2.js"></script>
+    <script type="module" src="commonProduct2.js"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
 
 </body>
