--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>velouré</title>
-  <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
@@ -373,7 +373,7 @@
         </svg>
         <div class="rights">
           <p>©24 Velouré - All rights reserved</p>
-          <a href="/terms&service.html">Terms of Service</a>
+          <a href="terms&service.html">Terms of Service</a>
           <a href="">Privacy Policy</a>
         </div>
       </div>
