--- a/yslproduct.html
+++ b/yslproduct.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saint Laurent</title>
-    <link rel="shortcut icon" href="/images/veloureLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/product/commonProduct.css">
+    <link rel="shortcut icon" href="veloureLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="commonProduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -75,13 +75,13 @@
             </header>
             <div class="homeImageContainer">
                 <div class="shImage">
-                    <img src="/images/yslbag2.avif" alt="">
+                    <img src="yslbag2.avif" alt="">
                 </div>
                 <div class="shImage">
-                    <img src="/images/ysl3.avif" alt="">
+                    <img src="ysl3.avif" alt="">
                 </div>
                 <div class="shImage">
-                    <img src="/images/yslland4.avif" alt="">
+                    <img src="yslland4.avif" alt="">
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
 
-    <script type="module" src="/product/commonProduct.js"></script>
+    <script type="module" src="commonProduct.js"></script>
 </body>
 
 </html>
