--- a/yslproduct.html
+++ b/yslproduct.html
@@ -152,7 +152,7 @@
                     </svg>
                     <div class="rights">
                         <p>©24 Velouré - All rights reserved</p>
-                        <a href="/terms&service.html">Terms of Service</a>
+                        <a href="terms&service.html">Terms of Service</a>
                         <a href="">Privacy Policy</a>
                     </div>
                 </div>
