--- a/cristianl.html
+++ b/cristianl.html
@@ -144,7 +144,7 @@
                 </svg>
                 <div class="rights">
                     <p>©24 Velouré - All rights reserved</p>
-                    <a href="/terms&service.html">Terms of Service</a>
+                    <a href="terms&service.html">Terms of Service</a>
                     <a href="">Privacy Policy</a>
                 </div>
             </div>
